--- a/DoAnLTM/src/client/index.html
+++ b/DoAnLTM/src/client/index.html
@@ -7,7 +7,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
+         
         <div id="container">
+            <div class="background"></div>
+            
             <div class="justifyTop noshrink">
                 <canvas width=140 height=140 id="reservedCanvas"></canvas>
             </div>
