add some animations

--- a/DoAnLTM/src/client/index.html
+++ b/DoAnLTM/src/client/index.html
@@ -7,10 +7,19 @@
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+        <div class="name">
+            <h1>Multris Team 12 NT106.M21</h1>
+        </div>
         <div id="container">
             <div class="background"></div>
-            
+            <div class="item1"></div>
+            <div class="item2">
+                <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+      <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+            </div>
+            <div class="item3"></div>
             <div class="justifyTop noshrink">
                 <canvas width=140 height=140 id="reservedCanvas"></canvas>
             </div>
