--- a/DoAnLTM/src/client/index.html
+++ b/DoAnLTM/src/client/index.html
@@ -24,10 +24,12 @@
             </div>
             <div class="item3"></div>
             <div class="item4"></div>
-            <div class="item5">
-                <div></div><div></div><div></div><div></div><div></div>
-                <div></div><div></div><div></div><div></div><div></div>
-            </div> 
+            <div class="item5"></div> 
+            <div class="item6"></div>
+            <div class="item7"></div>
+            <div class="item8"></div>
+            <div class="item9"></div>
+            <div class="item10"></div>
 
             <div class="justifyTop noshrink">
                 <canvas width=140 height=140 id="reservedCanvas"></canvas>
