--- a/DoAnLTM/src/client/index.html
+++ b/DoAnLTM/src/client/index.html
@@ -30,6 +30,12 @@
             <div class="item8"></div>
             <div class="item9"></div>
             <div class="item10"></div>
+            <div class="item11"></div> 
+            <div class="item12"></div>
+            <div class="item13"></div>
+            <div class="item14"></div>
+            <div class="item15"></div>
+            <div class="item16"></div>
 
             <div class="justifyTop noshrink">
                 <canvas width=140 height=140 id="reservedCanvas"></canvas>
