--- a/DoAnLTM/src/client/index.html
+++ b/DoAnLTM/src/client/index.html
@@ -36,6 +36,16 @@
             <div class="item14"></div>
             <div class="item15"></div>
             <div class="item16"></div>
+            <div class="item17"></div>
+            <div class="item18"></div>
+            <div class="item19"></div>
+            <div class="item20"></div>
+            <div class="item21"></div>
+            <div class="item22"></div>
+            <div class="item23"></div>
+            <div class="item24"></div>
+            <div class="item25"></div>
+            
 
             <div class="justifyTop noshrink">
                 <canvas width=140 height=140 id="reservedCanvas"></canvas>
